@@ -1,6 +1,7 @@
 2007-11-15  Ingo Renner	<ingo@typo3.org>
 
 	* enabled requestUpdate for rte_enabled
+	* added feature #6721: add the workspace selector to the cleaner backend toolbar
 
 2007-11-14  Stanislas Rolland  <stanislas.rolland@fructifor.ca>
 
